<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal|top"
    android:background="@drawable/red_bacl_ground"
    android:orientation="vertical">
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:padding="20dp"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:fontFamily="@font/din_next_lt_w23_medium"
        android:textSize="18sp"
        android:text="@string/add_text_title_text"/>
    <EditText
        android:id="@+id/textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:inputType="text"
        android:padding="20dp"
        android:textColorHint="@color/textColor"
        android:textColor="@color/textColor"
        android:hint="@string/text_hint_text" />

    <SeekBar
        android:id="@+id/textSizeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:max="100"
        android:progress="40" />

    <Button
        android:id="@+id/colorPickerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_color_text" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/add_txt_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:text="@string/save_text"/>

        <ImageView
            android:id="@+id/delete_txt_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="delete text"
            android:focusable="true"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/baseline_delete_forever_24"/>
    </LinearLayout>
</LinearLayout>